# AvrBuildEnvironment

./: Dockerfile  README.md  buildImage.sh  runAndConnect.sh
config/: bashrc.sh
test_projects/c_example_project/: CMakeLists.txt
test_projects/c_example_project/cmake/: FetchCMocka.cmake  InitializeSdk.cmake
test_projects/c_example_project/include/c_example_project/avr_register_controller/: ATmega328pRegisters.h
test_projects/c_example_project/include/c_example_project/hardware_settings/: HardwareSettings.h
